2005-03-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_new):
	  Don't set multichannel for fakesrc (leads to warnings).

2005-03-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (got_source):
	  Workaround race in metadata display (#168540).

2005-02-28  Bastien Nocera  <hadess@hadess.net>

	* configure.in: require glib 2.6.3 to fix the GStreamer thumbnailer
	quitting too early

2005-02-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_metadata_int):
	  Just read bitrate, not different kinds (leads to conflicts
	  with several elements).

2005-02-22  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_remove_files):
	Fix leak when removing files (Closes: #168190)

2005-02-21  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_get_subtitles),
	(bacon_video_widget_get_languages):
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_get_languages),
	(bacon_video_widget_get_subtitles),
	(bacon_video_widget_get_subtitle),
	(bacon_video_widget_set_subtitle):
	* src/totem.c: (on_title_change_event): more type-checking when
	entering public functions

2005-02-20  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* src/totem.c: (totem_action_set_mrl_with_warning):
	enable the volume items in the popup menu properly (Closes: #167915)

2005-02-19  Bastien Nocera  <hadess@hadess.net>

	* src/scrsaver.c: (totem_scrsaver_disable),
	(totem_scrsaver_enable):
	* src/totem.c: (totem_action_play), (totem_action_stop),
	(totem_action_play_pause), (totem_action_fullscreen_toggle):
	Only disable the screensaver in fullscreen, and when something
	is playing (Closes: #152814)

2005-02-19  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (init_config):
	* src/totem-preferences.c: (totem_setup_preferences): fix